--- a/package.json
+++ b/package.json
@@ -9,17 +9,21 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.3.4",
     "@nextui-org/react": "^2.2.10",
     "@types/recharts": "^1.8.29",
-    "framer-motion": "^11.0.14",
+    "framer-motion": "^10.2.4",
     "lucide-react": "^0.359.0",
     "next": "14.1.3",
     "react": "^18",
     "react-dom": "^18",
+    "react-hook-form": "^7.51.2",
     "react-icons": "^5.0.1",
-    "recharts": "^2.12.3"
+    "recharts": "^2.12.3",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@shrutibalasa/tailwind-grid-auto-fit": "^1.1.0",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
